Fix not right-align arrow on homepage

--- a/client/src/styles/pages/_HomePage.scss
+++ b/client/src/styles/pages/_HomePage.scss
@@ -109,7 +109,7 @@
     &:first-of-type {
       .challenges-text {
         display: flex;
-        align-items: center;
+        justify-content: space-between;
 
         a {
           margin-right: 0.5rem;
